--- a/schizocss.css
+++ b/schizocss.css
@@ -7,7 +7,7 @@ body {background-color: #ffffff;
               margin: auto;
               overflow: hidden;}
   header #branding {font-size: 22px;
-                   font-family: chiller; 
+                   font-family: Ruda; 
                    float:left;}
 
 header #branding h1{margin: 0px;
@@ -39,14 +39,14 @@ header nav {float: right;
 .welcome {
   text-align:center;
   padding-top: 50px;
-  font-family: chiller;
+  font-family: Ruda;
   font-size: 50px
  }
 
 .bold{font-weight: bold;
   font-size: 16px;
   font-family: Arial, Helvetica, sans-serif;}
-.udacity{font-family: chiller;
+.udacity{font-family: "Special+Elite", cursive;
 font-size: 13px;}
 
 
